Add subtle scroll animations to index.html
- Create scripts/scroll-animations.js with Intersection Observer
- Add CSS scroll animation styles with fade-in and slide-up effects
- Apply scroll-animate class to Work section and project cards
- Include staggered animation delays for project cards (0.1s intervals)
- Add scroll animations to About section elements
- Similar to Elizabeth's portfolio with smooth, subtle transitions

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <script defer src="scripts/scroll-animations.js"></script>
 </head>
 <body>
     <header class="header">
@@ -68,9 +69,9 @@
 
         <section id="work" class="work">
             <div class="container">
-                <h2 class="text-heading-2">Work</h2>
+                <h2 class="text-heading-2 scroll-animate">Work</h2>
                 <div class="project-grid">
-                    <a class="project-card" href="evolve-inbox.html">
+                    <a class="project-card scroll-animate" href="evolve-inbox.html">
                         <div class="project-image" style="background: #fcede6; display: grid; place-items: center;">
                             <img src="assets/evolve_inbox_project_thumbnail2.svg" alt="Project thumbnail" style="width: 85%; height: auto; display: block;"/>
                         </div>
@@ -78,7 +79,7 @@
                         <h3 class="text-heading-4">Streamlining Owner–Guest Communication with Inbox</h3>
                         <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
-                    <a class="project-card" href="evolve-self-serve-cancellations.html">
+                    <a class="project-card scroll-animate" href="evolve-self-serve-cancellations.html">
                         <div class="project-image">
                             <img src="assets/evolve_cancellation_thumbnail2.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
                         </div>
@@ -86,7 +87,7 @@
                         <h3 class="text-heading-4">Guided Self-Serve Cancellations Designed to Reduce Cost</h3>
                         <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
-                    <a class="project-card" href="evolve-owner-account.html">
+                    <a class="project-card scroll-animate" href="evolve-owner-account.html">
                         <div class="project-image" style="background: #fcede6; display: grid; place-items: center;">
                             <img src="assets/evolve_oa_thumbnail.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
                         </div>
@@ -94,7 +95,7 @@
                         <h3 class="text-heading-4">Transforming the Owner Journey with a Seamless Experience</h3>
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
-                    <a class="project-card" href="transamerica-app.html">
+                    <a class="project-card scroll-animate" href="transamerica-app.html">
                         <div class="project-image" style="background: #FFE8B3; display: grid; place-items: center; height: 200px; border-radius: 10px; overflow: hidden;">
                             <img src="assets/transamerica_app_thumbnail.png" alt="Project thumbnail" style="width: 30%; height: auto; display: block;"/>
                         </div>
@@ -102,7 +103,7 @@
                         <h3 class="text-heading-4">Designing a Mobile App that Empowers Users on their Retirement Journeys</h3>
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Transamerica</p>
                     </a>
-                    <a class="project-card" href="transamerica-workplace-experience.html">
+                    <a class="project-card scroll-animate" href="transamerica-workplace-experience.html">
                         <div class="project-image" style="background: #FFFFFF; display: flex; align-items: flex-end; justify-content: center; height: 200px; border-radius: 10px; overflow: hidden;">
                             <img src="assets/transamerica_wx_thumbnail.png" alt="Project thumbnail" style="width: 80%; height: auto; display: block;"/>
                         </div>
@@ -110,7 +111,7 @@
                         <h3 class="text-heading-4">Re-imagining a New Responsive Web Experience for Financial Professionals</h3>
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Transamerica</p>
                     </a>
-                    <a class="project-card" href="gm-dealer-sales-assistant-app.html">
+                    <a class="project-card scroll-animate" href="gm-dealer-sales-assistant-app.html">
                         <div class="project-image">
                             <img src="assets/gm_app_thumbnail.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
                         </div>
@@ -124,9 +125,9 @@
 
         <section id="about" class="about">
             <div class="container">
-                <h3 class="text-heading-2">Curious about my process?</h3>
-                <p class="text-body-lg">AI is now baked into my foundational process as a creative sidekick. <br> It's not a shortcut — it's a way to work smarter and stay curious.</p>
-                <p><a href="ai-design.html">Learn more</a></p>
+                <h3 class="text-heading-2 scroll-animate">Curious about my process?</h3>
+                <p class="text-body-lg scroll-animate">AI is now baked into my foundational process as a creative sidekick. <br> It's not a shortcut — it's a way to work smarter and stay curious.</p>
+                <p class="scroll-animate"><a href="ai-design.html">Learn more</a></p>
             </div>
         </section>
 
