Add secondary badge to evolve-inbox.html hero section
- Replicate dual badge structure from index.html line 78
- Wrap badges in .project-badges container with flex layout
- Add secondary '+ Case study' badge with grey background
- Include 16px gap between badges using var(--space-16)
- Add badge styles to evolve-inbox.css for consistency
- Maintain proper spacing with margin-bottom on container

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -46,7 +46,10 @@
         <section class="case-hero">
             <div class="container">
                 <div class="hero-content">
-                    <span class="launch-badge">Launched</span>
+                    <div class="project-badges">
+                        <span class="launch-badge">Launched</span>
+                        <span class="launch-badge project-badge--secondary">+ Case study</span>
+                    </div>
                     <h2 class="text-heading-2">Streamlining Owner – Guest Communication with Inbox</h2>
                 </div>
                 <div class="hero-media">
