Before copy changes

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -321,15 +321,11 @@
             <div class="metrics-left">
                 <h3 class="text-heading-3">Designs</h3>
                 <p class="text-body-base">Due to the timeline of beta and releasing sooner to gather learnings, the beta was lean. I designed a minimal Inbox feature with a few educational interactions to help solve the problem of engagement and adoption. To make it easier for users to handle booking requests from Inbox, I created a pathway to the existing booking view.</p>
-                <p class="text-body-base">In my design work for beta and future releases, I made sure to address their needs mentioned in the survey (see <a href="#discovery-carousel">Discovery</a>), which included automated messaging, easier dispute resolution, a guest review system, clear guidelines on communication expectations between owner and guests. </p>
+                <p class="text-body-base">In my design work for beta and future releases, I made sure to address their needs mentioned in the survey, which included automated messaging, easier dispute resolution, a guest review system, clear guidelines on communication expectations between owner and guests. </p>
                 <p class="text-body-base">Follow along with my design process and decision making in my annotations throughout the Figma file.</p>
             </div>
         </div>
       </section>
-
-      <div class="design-cta">
-        <a class="cta-button text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=1-7&p=f&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">🔒 View finals designs in Figma</a>
-    </div>
 
          </section>
         <!-- Designs image section (matches other image sections) -->
@@ -341,6 +337,9 @@
                         <img src="assets/evolve_inbox_beta_designs.svg" alt="Final designs for beta" data-zoomable />
                     </div>
                 </div>
+            <div class="design-cta">
+                <a class="cta-button text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=1-7&p=f&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">🔒 View finals designs in Figma</a>
+            </div>
             </div>
         </section>
 
@@ -352,10 +351,6 @@
             </div>
           </section>
 
-          <div class="design-cta">
-            <a class="cta-button text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=49-68713&p=f&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">🔒 View concepts in Figma</a>
-        </div>
-
         <section id="designs" class="solution-images">
             <div class="container">
                 <div class="solution-image">
@@ -363,6 +358,9 @@
                     <div class="solution-placeholder">
                         <img src="assets/evolve_inbox_concepts.svg" alt="Concepts for Inbox" data-zoomable />
                     </div>
+                </div>
+                <div class="design-cta">
+                    <a class="cta-button text-button" href="https://www.figma.com/design/1IAFFuWuWRupowgyrUU2Wq/Evolve--Inbox?node-id=49-68713&p=f&t=QMRPdkKFBSMVQDnE-11" target="_blank" rel="noopener noreferrer">🔒 View concepts in Figma</a>
                 </div>
             </div>
         </section>
