--- a/evolve-owner-account.html
+++ b/evolve-owner-account.html
@@ -283,14 +283,14 @@
                 <div class="discovery-image">
                     <p class="text-body-base-bold discovery-caption">A snapshot into the information architecture: for new web</p>
                     <div class="discovery-placeholder">
-                        <img src="assets/evolve_oa_web IA.png" alt="OA web IA map" style="width: 50%; height: auto; display: block; margin: 0 auto;"/>
+                        <img src="assets/evolve_oa_web IA.png" alt="OA web sitemap" style="width: 50%; height: auto; display: block; margin: 0 auto;"/>
                     </div>
                 </div>
             </div>
         </section>
 
         <div class="discovery-images design-cta">
-            <a class="cta-button text-button" href="https://www.figma.com/board/wELjLypyuvj2YHNDTLWBgd/Evolve--Owner-Account-Web---App-IA?node-id=0-1&t=q4lKVZO08UIlJXRg-1" target="_blank" rel="noopener noreferrer">🔒 View IA maps in Figma</a>
+            <a class="cta-button text-button" href="https://www.figma.com/board/wELjLypyuvj2YHNDTLWBgd/Evolve--Owner-Account-Web---App-IA?node-id=0-1&t=q4lKVZO08UIlJXRg-1" target="_blank" rel="noopener noreferrer">🔒 View sitemaps in Figma</a>
         </div>
 
         <section class="case-metrics solution-section design-section">
