--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <h2 class="text-heading-2 scroll-animate">Work</h2>
                 <div class="project-grid">
-                    <a class="project-card scroll-animate" href="evolve-inbox.html">
+                    <a class="project-card" href="evolve-inbox.html">
                         <div class="project-image" style="background: #fcede6; display: grid; place-items: center;">
                             <img src="assets/evolve_inbox_project_thumbnail2.svg" alt="Project thumbnail" style="width: 85%; height: auto; display: block;"/>
                         </div>
@@ -82,7 +82,7 @@
                         <h3 class="text-heading-4">Streamlining Owner–Guest Communication with Inbox</h3>
                         <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
-                    <a class="project-card scroll-animate" href="evolve-self-serve-cancellations.html">
+                    <a class="project-card" href="evolve-self-serve-cancellations.html">
                         <div class="project-image">
                             <img src="assets/evolve_cancellation_thumbnail2.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
                         </div>
@@ -90,7 +90,7 @@
                         <h3 class="text-heading-4">Guided Self-Serve Cancellations Designed to Reduce Cost</h3>
                         <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
-                    <a class="project-card scroll-animate" href="evolve-owner-account.html">
+                    <a class="project-card" href="evolve-owner-account.html">
                         <div class="project-image" style="background: #fcede6; display: grid; place-items: center;">
                             <img src="assets/evolve_oa_thumbnail.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
                         </div>
@@ -98,7 +98,7 @@
                         <h3 class="text-heading-4">Transforming the Owner Journey with a Seamless Experience</h3>
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
-                    <a class="project-card scroll-animate" href="transamerica-app.html">
+                    <a class="project-card" href="transamerica-app.html">
                         <div class="project-image" style="background: #FFE8B3; display: grid; place-items: center; height: 200px; border-radius: 10px; overflow: hidden;">
                             <img src="assets/transamerica_app_thumbnail.png" alt="Project thumbnail" style="width: 30%; height: auto; display: block;"/>
                         </div>
@@ -106,7 +106,7 @@
                         <h3 class="text-heading-4">Designing a Mobile App that Empowers Users on their Retirement Journeys</h3>
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Transamerica</p>
                     </a>
-                    <a class="project-card scroll-animate" href="transamerica-workplace-experience.html">
+                    <a class="project-card" href="transamerica-workplace-experience.html">
                         <div class="project-image" style="background: #FFFFFF; display: flex; align-items: flex-end; justify-content: center; height: 200px; border-radius: 10px; overflow: hidden;">
                             <img src="assets/transamerica_wx_thumbnail.png" alt="Project thumbnail" style="width: 80%; height: auto; display: block;"/>
                         </div>
@@ -114,7 +114,7 @@
                         <h3 class="text-heading-4">Re-imagining a New Responsive Web Experience for Financial Professionals</h3>
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Transamerica</p>
                     </a>
-                    <a class="project-card scroll-animate" href="gm-dealer-sales-assistant-app.html">
+                    <a class="project-card" href="gm-dealer-sales-assistant-app.html">
                         <div class="project-image">
                             <img src="assets/gm_app_thumbnail.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
                         </div>
